CRUD service implemented, YearRange, Empty string check added

--- a/VehicleService/Web.config
+++ b/VehicleService/Web.config
@@ -41,6 +41,15 @@
         Set to false before deployment to avoid disclosing web app folder information.
       -->
     <directoryBrowse enabled="true"/>
+
+    <httpProtocol>
+      <customHeaders>
+        <add name="Access-Control-Allow-Origin" value="*" />
+        <add name="Access-Control-Allow-Methods" value="GET, PUT, POST, DELETE, HEAD, OPTIONS" />
+        <add name="Access-Control-Allow-Credentials" value="true"/>
+        <add name="Access-Control-Allow-Headers" value="X-Requested-With, origin, content-type, accept" />
+      </customHeaders>
+    </httpProtocol>
   </system.webServer>
 
 </configuration>
