comment added in Web config

--- a/VehicleService/Web.config
+++ b/VehicleService/Web.config
@@ -9,6 +9,9 @@
     <httpRuntime targetFramework="4.5"/>
   </system.web>
   <system.serviceModel>
+    <!--
+      Hosting and configuring service
+    -->
      <services>
       <service name="VehicleServices.VehicleService">
         <endpoint binding="webHttpBinding" contract="VehicleServices.IVehicleService" behaviorConfiguration="webHttp"/>
@@ -42,6 +45,9 @@
       -->
     <directoryBrowse enabled="true"/>
 
+    <!-- 
+        To enable Cross-Origin Resouce Sharing (CORS) .
+    -->
     <httpProtocol>
       <customHeaders>
         <add name="Access-Control-Allow-Origin" value="*" />
